CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785)
	- The scheduler now supports Kerberized printing with
	  multiple server names (STR #2783)
	- "Satisfy any" did not work in IPP policies (STR #2782)
	- The CUPS imaging library would crash with very large
	  images - more than 16Mx16M pixels (STR #2805)
	- The PNG image loading code would crash with large images
	  (STR #2790)
	- The scheduler did not limit the total number of filters.
	- The scheduler now ensures that the RSS directory has
	  the correct permissions.
	- The RSS notifier did not quote the feed URL in the RSS
	  file it created (STR #2801)
	- The web interface allowed the creation and cancellation
	  of RSS subscriptions without a username (STR #2774)
	- Increased the default MaxCopies value on Mac OS X to
	  9999 to match the limit imposed by the print dialog.
	- The scheduler did not reject requests with an empty
	  Content-Length field (STR #2787)
	- The scheduler did not log the current date and time and
	  did not escape special characters in request URIs when
	  logging bad requests to the access_log file (STR #2788)


CHANGES IN CUPS V1.3.7

	- CVE-2008-0047: cgiCompileSearch buffer overflow (STR #2729)
	- CVE-2008-1373: CUPS GIF image filter overflow (STR #2765)
	- Updated the "make check" tests to do a more thorough
	  automated test.
	- cups-driverd complained about missing directories (STR
	  #2777)
	- cupsaddsmb would leave the Samba username and password on
	  disk if no Windows drivers were installed (STR #2779)
	- The Linux USB backend used 100% CPU when a printer was
	  disconnected (STR #2769)
	- The sample raster drivers did not properly handle SIGTERM
	  (STR #2770)
	- The scheduler sent notify_post() messages too often on
	  Mac OS X.
	- Kerberos access to the web interface did not work
	  (STR #2748)
	- The scheduler did not support "AuthType Default" in IPP
	  policies (STR #2749)